<package format="2">
  <name>subt_seed</name>
  <version>0.1.0</version>
  <description>A reference participant for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos AgÅero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rotors_description</depend>
  <depend>subt_communication_broker</depend>
  <depend>subt_ign</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- path to models -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
